--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -2,10 +2,21 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: calc(var(--nav-width) + var(--gap) * 2);
-    margin-inline-start: auto;
-    margin-inline-end: auto;
+    width: 100%;
     line-height: var(--header-height);
+    background: #28639b;
+}
+
+.nav a,
+.nav .logo a,
+#menu a,
+#menu .active,
+.lang-switch a {
+    color: white !important;
+}
+
+.nav .logo a {
+    color: white !important;
 }
 
 .nav a {
