--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -1,3 +1,6 @@
+@import "tailwindcss";
+
+
 .main {
     position: relative;
     min-height: calc(100vh - var(--header-height) - var(--footer-height));
