--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{- define "main" }}
-
+<h1 class="text-blue-500">{{ .Title }}</h1>
 <article class="post-single">
   <header class="post-header">
     {{ partial "breadcrumbs.html" . }}
