--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -80,9 +80,7 @@
     </h2>
   </header>
   {{- if (ne (.Param "hideSummary") true) }}
-  <div class="entry-content">
-    <p>{{ .Summary | plainify | htmlUnescape }}{{ if .Truncated }}...{{ end }}</p>
-  </div>
+
   {{- end }}
   {{- if not (.Param "hideMeta") }}
   <footer class="entry-footer">
@@ -93,7 +91,10 @@
 </article>
 {{- end }}
 
+
+{{- if .IsHome }}
 {{ partial "team-section.html" . }}
+{{- end }}
 
 
 
