--- a/layouts/partials/templates/schema_json.html
+++ b/layouts/partials/templates/schema_json.html
@@ -33,21 +33,20 @@
   "@type": "BreadcrumbList",
   "itemListElement": [
   {{- range $index, $element := $bc_list }}
+  {{- $scratch.Add "path" (printf "%s/" $element ) | safeJS }}
+  {{- $bc_pg := site.GetPage ($scratch.Get "path") -}}
 
-    {{- $scratch.Add "path" (printf "%s/" $element ) | safeJS }}
-    {{- $bc_pg := site.GetPage ($scratch.Get "path") -}}
-
-    {{- if (and ($bc_pg) (gt (len . ) 0))}}
-    {{- if (and $index)}}, {{end }}
+  {{- if (and ($bc_pg) (gt (len . ) 0))}}
+    {{- if gt $index 0 }},{{ end }}
     {
       "@type": "ListItem",
-      "position": {{ add 1 $index  }},
-      "name": {{ $bc_pg.Name }},
-      "item": {{ $bc_pg.Permalink | safeHTML }}
+      "position": {{ add 1 $index }},
+      "name": {{ $bc_pg.Name | jsonify }},
+      "item": {{ $bc_pg.Permalink | jsonify }}
     }
-    {{- end }}
-
   {{- end }}
+{{- end }}
+
   {{- /*  self-page addition  */ -}}
   {{- if (ge (len $bc_list) 2) }}, {{end }}
     {
