--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,8 @@
 {{- if not (.Param "hideFooter") }}
 <footer class="footer">
+    {{ if .IsHome }}
+        {{ partial "footer-form.html" . }}
+    {{ end }}
     {{- if not site.Params.footer.hideCopyright }}
         {{- if site.Copyright }}
         <span>{{ site.Copyright | markdownify }}</span>
