--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -105,6 +105,7 @@
 {{- range .AllTranslations -}}
 <link rel="alternate" hreflang="{{ .Lang }}" href="{{ .Permalink }}">
 {{ end -}}
+<link rel="stylesheet" href="/photoswipe/photoswipe.css">
 
 <noscript>
     <style>
